@@ -5,6 +5,7 @@ Release 0.8.5
 * fix a bug while removing noisy templates in meta merging
 * refactoring of the meta merging GUI, addition of bhatta distances
 * meta merging more robust for non stationary recordings
+* enhance logging if parameters are missing and/or not defined
 
 =============
 Release 0.8.4
